# arch-spring-2024

./: .clang-format  .clang-tidy  README.md
HW01/: ALU.py  DataMemory.py  FSM.py  Machine.py  ProgramMemory.py  RegisterFile.py
Ipatov/HW2/: .gitignore  README.md
Ipatov/HW2/avr-project/: Makefile  simple.c
Ivanov/HW1/: .gitignore  Makefile  README.md
Ivanov/HW1/src/: alu.c  alu.h  cpu.c  cpu.h  instructions.c  instructions.h  main.c  memory.c  memory.h  registers.c  registers.h
Ivanov/HW1/test_scripts/: simple_test
Ivanov/HW2/avr-project/: Makefile  README.md  out  simple.c  simple.elf  test.sh
Karol/HW1/: README.md
Karol/HW1/machine/: CMakeLists.txt  main.cpp
Karol/HW1/machine/instructions/: Add.h  And.h  Cmp.h  CmpJump.h  Grt.h  Instruction.h  Jump.h  Less.h  Load.h  LoadI.h  Move.h  Neg.h  Or.h  Print.h  Store.h  Subtract.h  Xor.h
Karol/HW1/machine/storage/: GlobalStorage.h
Kharitontcev-Beglov/HW-1/: Cargo.toml  Grammar.md  InstructionSet.md  Makefile  binary_format.md  emulator-parts.md
Kharitontcev-Beglov/HW-1/emulator/: emulator.rs  inst.rs  main.rs
Kharitontcev-Beglov/HW-1/emulator/emulator/: tests.rs
Kharitontcev-Beglov/HW-1/lib/: klang.rs
Kharitontcev-Beglov/HW-1/lib/binary/: instructions.rs  mod.rs
Kharitontcev-Beglov/HW-1/lib/lexer/: mod.rs  tokens.rs
Kharitontcev-Beglov/HW-1/lib/parser/: ast.rs  mod.rs
Kharitontcev-Beglov/HW-1/lib/stack_machine/: mod.rs  sm.rs  transform.rs
Kharitontcev-Beglov/HW-1/src/: main.rs
Kharitontcev-Beglov/HW-1/test_programs/: complex_variables.klang  ifs.klang  simple_sub.klang  simple_variable.klang
Kharitontcev-Beglov/HW-1/tests/: Makefile
Kharitontcev-Beglov/HW-1/tests/complex/: Makefile  fib.klang  pow.ans  pow.klang
Kharitontcev-Beglov/HW-1/tests/simple/: Makefile  complex_expr.klang  complex_ifs.klang  complex_variables.ans  complex_variables.klang  const_works.klang  ifs.klang  print_works.klang  simple_expr.klang  unary_not.klang  while.klang
Kharitontcev-Beglov/HW-2/: .gitignore  docker-compose.yml
Kharitontcev-Beglov/HW-2/avr-project/: Makefile  context.c  context.h  simple.c  test_output
Lebedev/HW1/: Cargo.toml  IS.md  program.le
Lebedev/HW2/avr-project/: Makefile  expected-test-result.txt  simple.c  test.sh
Makeev/HW2/avr-project/: simple.c  simple.elf
Meringov/HW1/: Makefile
Meringov/HW1/Compiler/: build.gradle.kts  settings.gradle.kts
Meringov/HW1/Emulator/: Makefile
Meringov/HW1/src/: Bus.cpp  CPU.cpp  main.cpp
Meringov/HW2/avr-project/: simple.c
Shefer/HW1/: CMakeLists.txt  main.cpp
Shefer/HW1/Parser/: CMakeLists.txt  Expressions.cpp  Expressions.h  Lexer.cpp  Lexer.h  ParseError.h  Parser.cpp  Parser.h  Statements.cpp  Statements.h  Token.cpp  Token.h
lebedev/: Makefile
lebedev/src/: main.rs
lebedev/src/lang/: compiler.rs
(+37 files in other folders)
