[package]
name = "HW-1"
version = "0.1.0"
edition = "2021"

[lib]
name = "klang_lib"
path = "lib/klang.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mips_emulator"
path = "emulator/main.rs"

[[bin]]
name = "compiler"
path = "src/main.rs"
[dependencies]
nom = "7.1.3"
deku = "0.16"